--- a/uj/zajecia/24-25z/wats3-1/index.html
+++ b/uj/zajecia/24-25z/wats3-1/index.html
@@ -78,11 +78,11 @@
 
 	<ul class="sample-topics">
 		<li>folklor/szamanizm</li>
-		<li>niska dzietność</li>
 		<li>popkultura</li>
 		<li><del>bieżące sprawy</del></li>
 		<li><del>militaria (Polska-Korea)</del></li>
 		<li><del>motoryzacja</del></li>
+		<li><del>niska dzietność</del></li>
 		<li><del>opieka psychologiczna/psychiatryczna</del></li>
 	</ul>
 </details>
@@ -169,8 +169,8 @@
 				<th scope="row">6</th>
 				<td>22 listopada</td>
 				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">niska dzietność</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/wats3-1/zajecia/6">서울 유치원 교사 신규 임용 ‘0′명, 세계 최저 출생률 충격파</a></td>
 			</tr>
 		</tbody>
 		<tbody>
@@ -179,17 +179,17 @@
 				<td rowspan="3">29 listopada 2024</td>
 				<td class="schedule-presentation">Praca domowa 1</td>
 				<td class="schedule-presentation">Kinga Majcherczyk</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">nagroda Nobla dla Han Gang</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 2</td>
 				<td class="schedule-presentation">Matylda Siodmok</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">skok gospodarczy</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 3</td>
 				<td class="schedule-presentation">Paulina Wałęga</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">praca dorywcza wśród studentów</td>
 			</tr>
 		</tbody>
 		<tbody>
