--- a/uj/zajecia/24-25z/wats3-2/index.html
+++ b/uj/zajecia/24-25z/wats3-2/index.html
@@ -86,7 +86,6 @@
 		<li>moda (np. high fashion)</li>
 		<li>polityka</li>
 		<li>popkultura</li>
-		<li>problemy społeczne (np. starzenie się społeczeństwa)</li>
 		<li>relacje międzykoreańskie</li>
 		<li>społeczeństwo</li>
 		<li>wojskowość</li>
@@ -94,6 +93,7 @@
 		<li><del>dyplomacja</del></li>
 		<li><del>mowa potoczna</del></li>
 		<li><del>sprawy kryminalne</del></li>
+		<li><del>starzenie się społeczeństwa</del></li>
 	</ul>
 </details>
 
@@ -179,8 +179,8 @@
 				<th scope="row">6</th>
 				<td>22 listopada</td>
 				<td class="schedule-lecture">Zajęcia</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">starzenie się społeczeństwa</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25z/wats3-2/zajecia/6">가난과 외로움에 지쳐… 매년 수천명 노인이 삶의 끈 놓는다</a></td>
 			</tr>
 		</tbody>
 		<tbody>
@@ -199,7 +199,7 @@
 			<tr>
 				<td class="schedule-presentation">Praca domowa 3</td>
 				<td class="schedule-presentation">Aleksandra Przęczek</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation">malarstwo koreańskie</td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 4</td>
