--- a/uj/zajecia/24-25l/ljk5/index.html
+++ b/uj/zajecia/24-25l/ljk5/index.html
@@ -239,8 +239,8 @@
 			<tr>
 				<th scope="row">3</th>
 				<td>12 marca 2025</td>
-				<td class="schedule-lecture"></td>
-				<td class="schedule-lecture"></td>
+				<td class="schedule-lecture">baśnie i legendy</td>
+				<td class="schedule-lecture"><a href="uj/zajecia/24-25l/ljk5/zajecia/tlumaczenie/2">단군 신화</a></td>
 			</tr>
 			<tr>
 				<th scope="row">4</th>
