--- a/uj/zajecia/24-25l/ljk5/zajecia/czytanie/1/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/czytanie/1/index.html
@@ -112,7 +112,7 @@
 		<li>한류 배우는 떨어진 인기로 해외 광고에 출연할 기회가 줄어들었다.</li>
 		<li>한류 배우가 인기를 끌기 위해서는 해외 광고에 많이 출연해야 한다.</li>
 		<li>한류 배우는 인기에 상관없이 해외에서 광고 출연 요청을 받고 있다.</li>
-		<li>한류 배우가 큰 인기를 얻으면서 해외 광고 출연 요청이 잇따르고 있다.</li>
+		<li>한류 배우가 큰 인기를 얻으면서 해외 광고 출연 요청이 잇따르고 있다. <strong class="correct">✓</strong></li>
 	</ol>
 </div>
 <div class="exam-question">
@@ -131,7 +131,7 @@
 	<div class="topik-textbox">제2공장 정상 가동, 반도체 공급 안정은 미지수</div>
 	<ol>
 		<li>제2공장이 정상적으로 가동됨에 따라 반도체 공급이 안정되었다.</li>
-		<li>제2공장이 반도체 생산을 시작했지만 공급이 안정될지는 불확실하다.</li>
+		<li>제2공장이 반도체 생산을 시작했지만 공급이 안정될지는 불확실하다. <strong class="correct">✓</strong></li>
 		<li>반도체가 안정적으로 공급되기 위해서는 제2공장의 가동이 필수적이다.</li>
 		<li>반도체 공급이 안정적으로 이루어지면서 제2공장도 정상 가동될 수 있었다.</li>
 	</ol>
@@ -152,7 +152,7 @@
 	</ul>
 	<div class="topik-textbox">온라인 거래 사기 급증, 정부 대책 마련은 미흡</div>
 	<ol>
-		<li>온라인 거래 사기가 늘었지만 정부의 대책 마련은 충분하지 않다.</li>
+		<li>온라인 거래 사기가 늘었지만 정부의 대책 마련은 충분하지 않다. <strong class="correct">✓</strong></li>
 		<li>온라인 시장에서 거래 사기가 증가해 정부가 대책을 수립하고 있다.</li>
 		<li>온라인 거래 사기를 막기 위해 마련한 정부의 대책은 큰 효과가 없었다.</li>
 		<li>온라인 거래 사기 피해자들을 위해 정부가 대책을 마련하겠다고 발표했다.</li>
@@ -179,7 +179,7 @@
 		<p>지우개는 다른 문구류와 오래 닿으면 그것에 달라붙는 성질이 있다. 지우개를 만들 때 넣는 특수한 물질 때문이다. 지우개의 재료인 고무에 약품을 넣으면 고무 분자들이 결합하게 된다. 그런데 고무에 넣은 약품은 플라스틱에 들어가면 (&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;) 한다. 이 때문에 지우개와 플라스틱 문구류를 함께 두면 잘 붙는다.</p>
 	</div>
 	<ol>
-		<li>고무를 달라붙게</li>
+		<li>고무를 달라붙게 <strong class="correct">✓</strong></li>
 		<li>고무를 딱딱하게</li>
 		<li>문구류와 붙지 않게</li>
 		<li>문구류에 닿지 않게</li>
