--- a/uj/zajecia/24-25l/mkmb/class/2/index.html
+++ b/uj/zajecia/24-25l/mkmb/class/2/index.html
@@ -15,9 +15,9 @@
 
 <h2>business - 직장인 인사 예절</h2>
 
-<!-- <div class="youtube"> -->
-	<!-- <object data="https://youtube.com/embed/uPxk_VuEwL4" type="text/html">바른생활예절</object> -->
-<!-- </div> -->
+<div class="youtube">
+	<object data="https://youtube.com/embed/uPxk_VuEwL4" type="text/html">바른생활예절</object>
+</div>
 
 <ul class="gallery">
 	<li><a href="uj/zajecia/24-25l/mkmb/class/2/img/인사종류.png"><img src="uj/zajecia/24-25l/mkmb/class/2/img/인사종류.png" alt="인사종류"></a></li>
