--- a/uj/index.html
+++ b/uj/index.html
@@ -27,7 +27,7 @@
 <h3>Semestr letni 2024/2025</h3>
 
 <ul>
-	<li><!--a href="uj/zajecia/24-25l/klc2"!-->Korean Language Class (2)</a></li>
+	<li><a href="uj/zajecia/24-25l/klc2">Korean Language Class (2)</a></li>
 	<li><a href="uj/zajecia/24-25l/ljk5">Lektorat języka koreańskiego - poziom 5</a></li>
 	<li><a href="uj/zajecia/24-25l/mkmb">Modern Korean in Media and Business (3)</a></li>
 </ul>
@@ -38,7 +38,7 @@
 <ul>
 	<li><a href="uj/zajecia/24-25z/assk">Analiza stosunków społecznych w Korei na przykładach sztuki tradycyjnej i współczesnej</a></li>
 	<li><!--a href="uj/zajecia/24-25z/itas"-->Introduction to Asian Studies: overview of research methods<!--/a--></li>
-	<li><!--a href="uj/zajecia/24-25z/klc2"!-->Korean Language Class (2)</a></li>
+	<li><a href="uj/zajecia/24-25z/klc2">Korean Language Class (2)</a></li>
 	<li><a href="uj/zajecia/24-25z/ljk4">Lektorat języka koreańskiego - poziom 4</a></li>
 	<li><a href="uj/zajecia/24-25z/wats3-1">Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 1</a></li>
 	<li><a href="uj/zajecia/24-25z/wats3-2">Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 2</a></li>
