--- a/uj/zajecia/24-25l/ljk5/index.html
+++ b/uj/zajecia/24-25l/ljk5/index.html
@@ -176,6 +176,11 @@
 				<td>18 czerwca 2025</td>
 				<td class="schedule-exam" colspan="2"><a href="uj/zajecia/24-25l/ljk5/testy/czytanie/3">Egzamin <nobr>(9.00–10.00, s. 2.02)</nobr></a></td>
 			</tr>
+			<tr>
+				<th scope="row">14</th>
+				<td>26 czerwca 2025</td>
+				<td class="schedule-exam" colspan="2"><a href="uj/zajecia/24-25l/ljk5/testy/czytanie/3-1">Egzamin (dodatkowy) <nobr>(9.30–10.30, s. 1.15)</nobr></a></td>
+			</tr>
 		</tbody>
 	</table>
 </div>
@@ -304,13 +309,17 @@
 				<td class="schedule-presentation">Praca domowa 10</td>
 				<td class="schedule-presentation" colspan="2"><a href="uj/zajecia/24-25l/ljk5/pracedomowe/10">Wiktoria Świt - dzień z życia K-pop trainee</a></td>
 			</tr>
-		</tbody>
-		<tbody>
 			<tr>
 				<th scope="row">13</th>
 				<td>18 czerwca 2025</td>
 				<td class="schedule-exam">Egzamin <nobr>(10.15–11.15, s. 2.02)</nobr></td>
 				<td class="schedule-exam" colspan="2"><a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/3">baśnie i legendy, psychologia</a></td>
+			</tr>
+			<tr>
+				<th scope="row">14</th>
+				<td>26 czerwca 2025</td>
+				<td class="schedule-exam">Egzamin (dodatkowy) <nobr>(10.45–11.45, s. -1.15)</nobr></td>
+				<td class="schedule-exam" colspan="2"><a href="uj/zajecia/24-25l/ljk5/testy/tlumaczenie/3-1">polityka, psychologia</a></td>
 			</tr>
 		</tbody>
 	</table>
