--- a/joplin/index.html
+++ b/joplin/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="height=device-height, width=device-width, initial-scale=1">
 	<meta name="robots" content="none">
-	<link rel="icon" href="data:,">
+	<link rel="shortcut icon" href="data:image/x-icon;base64,iVBORw0KGgo=">
 
-	<title>twilczynski.com</title>
-	<meta name="author" content="Tomasz Wilczyński">
+	<title>Tweaks for Joplin | twilczynski.com</title>
 	<meta name="description" content="">
 </head><body>
 </body></html>
