--- a/uj/zajecia/24-25z/wats3-1/index.html
+++ b/uj/zajecia/24-25z/wats3-1/index.html
@@ -232,8 +232,8 @@
 				<th scope="row" rowspan="2">11</th>
 				<td rowspan="2">10 stycznia 2025</td>
 				<td class="schedule-exam">Kolokwium 3 (8.00–8.30)</td>
-				<td class="schedule-exam"></td>
-				<td class="schedule-exam"></td>
+				<td class="schedule-exam">Boże Narodzenie</td>
+				<td class="schedule-exam"><a href="uj/zajecia/24-25z/wats3-1/testy/3">"우와! 산타 할아버지가 우리 집에!"</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia</td>
