--- a/uj/zajecia/24-25z/wats3-1/zajecia/10/index.html
+++ b/uj/zajecia/24-25z/wats3-1/zajecia/10/index.html
@@ -37,8 +37,17 @@
 <h3>번역</h3>
 
 <p>0. 찢고 붙이고…5만원권 5장, 6장으로 만든 30대</p>
+<ul>
+	<li>Rwać i kleić, czyli 30-kilkulatek, który zrobił sześć z pięciu banknotów o nominale 50 000 wonów</li>
+</ul>
 <p>1-1. 5만원권 지폐 일부를 잘라내 금융기관에서 새 지폐로 바꾸고,</p>
+<ul>
+	<li>30-kilkuletni mężczyzna, które nadcięte pięć banknotów o nominale 50 000 wonów wymienił na nowe w banku,</li>
+</ul>
 <p>1-2. 잘린 조각들은 이어 붙여 위조지폐를 만든 30대 남성이 철창 신세를 지게 됐다.</p>
+<ul>
+	<li>a odcięte fragmenty skleił w całość tworząc fałszywe banknoty, trafił za kratki.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -57,9 +66,21 @@
 
 <p>2-1. A 씨는 5만원권 지폐 1매당 약 20％에 해당하는 부분을 찢어내고</p>
 <p>2-2. 남은 부분을 금융기관에 가져가면 새 지폐로 교환할 수 있다는 사실을 알고 범행을 계획했다.</p>
+<ul>
+	<li>Mężczyzna zaplanował przestępstwo mając świadomość, że może oderwać około 20% powierzchni z banknotu o wartości 50 000 wonów, a pozostały fragment zabrać do banku i wymienić na nowe banknoty.</li>
+</ul>
 <p>3-1. 그는 서울 구로구의 한 고시원에서 5만원권 5장의 각각 왼쪽 위와 아래, 중앙, 오른쪽 위와 아래를 손으로 찢은 뒤</p>
+<ul>
+	<li>Przebywając w jednym z hosteli w dzielnicy Guro w Seulu, oderwał on górną i dolną część lewej strony, środek oraz górną i dolną część prawej strony z pięciu banknotów o nominale 50 000 wonów,</li>
+</ul>
 <p>3-2. 남은 부분을 금융기관에서 새로운 지폐로 바꿨다.</p>
+<ul>
+	<li>a pozostałe części wymienił w banku na nowe banknoty.</li>
+</ul>
 <p>4. 찢어낸 조각들은 테이프로 이어 붙여 지폐를 한 장 더 만들었다.</p>
+<ul>
+	<li>Oderwane kawałki skleił taśmą w całość, tworząc dodatkowy banknot.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -81,7 +102,16 @@
 <h3>번역</h3>
 
 <p>5-1. 이 같은 방법으로 위조한 지폐를 지난해 7월 식당에서 3천원짜리 김밥을 사는 데 사용하고</p>
+<ul>
+	<li>W lipcu ubiegłego roku posłużył się stworzonym w ten sposób fałszywym banknotem, aby zakupić w restauracji kimbap o wartości 3000 wonów,</li>
+</ul>
 <p>5-2. 거스름돈 4만7천원을 받기도 했다.</p>
+<ul>
+	<li>za który otrzymał 47 000 wonów reszty.</li>
+</ul>
+
+<h2 class="homework">Praca domowa</h2>
+
 <p>6. A 씨는 위조지폐라는 사실을 몰랐다고 진술했으나 재판부는 이를 받아들이지 않았다.</p>
 <p>7-1. 수사 과정에선 A 씨의 거주지에서 부분적으로 훼손된 5만원권이 100매 이상 발견됐고</p>
 <p>7-2. 절단을 위해 샤프로 금을 그어둔 지폐도 나왔다.</p>
@@ -113,6 +143,9 @@
 
 <p>8-1. A 씨는 2020년에도 5만원권 지폐 55매를 같은 방법으로 위조해</p>
 <p>8-2. 처벌받은 전력이 있는 것으로 확인됐다.</p>
+
+<hr class="homework">
+
 <p>9-1. 재판부는 "통화위조 및 위조통화행사 범행은</p>
 <p>9-2. 통화에 대한 공공의 신용과 화폐의 유통에 대한 거래 안전을 심각하게 해치는 행위"라며</p>
 <p>9-3. "피고인이 동종 또는 유사범죄로 여러 차례 형사처벌 받은 전력이 있음에도</p>
