--- a/uj/zajecia/24-25z/wats3-2/index.html
+++ b/uj/zajecia/24-25z/wats3-2/index.html
@@ -236,27 +236,27 @@
 				<td rowspan="5">20 grudnia 2024</td>
 				<td class="schedule-presentation">Praca domowa 5</td>
 				<td class="schedule-presentation">Noemi Matuszczak - powodzie</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation"><a href="uj/zajecia/24-25z/wats3-2/pracedomowe/5">북중 피해 ‘극과 극’…“중국측 홍수방지 방벽으로 북한에 더 큰 피해”</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 6</td>
 				<td class="schedule-presentation">Karolina Żmuda - Seongsu jako „najfajniejsza dzielnica świata”</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation"><a href="uj/zajecia/24-25z/wats3-2/pracedomowe/6">'성수동에서 놀자'…데이트코스부터 맛집까지</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 7</td>
 				<td class="schedule-presentation">Bogdan Borawski - techno-orientalizm</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation"><a href="uj/zajecia/24-25z/wats3-2/pracedomowe/7">왜 동양인 얼굴은 똑같아?"…'롤드컵' 뮤직비디오 인종차별 논란</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 8</td>
 				<td class="schedule-presentation">Martyna Zboch - polityka zagraniczna Korei Płd. wobec UE</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation"><a href="uj/zajecia/24-25z/wats3-2/pracedomowe/8">성남시, 폴란드 브로츠와프시와 우호 교류 협약</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-presentation">Praca domowa 9</td>
 				<td class="schedule-presentation">Wiktoria Puchała - sprawa kryminalna Jeong Yu-jeong</td>
-				<td class="schedule-presentation"></td>
+				<td class="schedule-presentation"><a href="uj/zajecia/24-25z/wats3-2/pracedomowe/9">어쩐지 쎄한 중고거래… “살인해보고 싶었다”던 정유정 미끼였다</a></td>
 			</tr>
 		</tbody>
 		<tbody>
@@ -264,8 +264,8 @@
 				<th scope="row" rowspan="2">11</th>
 				<td rowspan="2">10 stycznia 2025</td>
 				<td class="schedule-exam">Kolokwium 3 (9.45–10.15)</td>
-				<td class="schedule-exam"></td>
-				<td class="schedule-exam"></td>
+				<td class="schedule-exam">e-sport</td>
+				<td class="schedule-exam"><a href="uj/zajecia/24-25z/wats3-2/testy/3">제주국제대학교에 e-스포츠부와 체조부가 만들어진다</a></td>
 			</tr>
 			<tr>
 				<td class="schedule-lecture">Zajęcia</td>
@@ -295,7 +295,7 @@
 			<tr>
 				<th scope="row">14</th>
 				<td>31 stycznia 2025</td>
-				<td class="schedule-exam">Test końcowy (10.15–11.15)</td>
+				<td class="schedule-exam">Test końcowy (14.00–15.00)</td>
 				<td class="schedule-exam"></td>
 				<td class="schedule-exam"></td>
 			</tr>
@@ -304,4 +304,3 @@
 </div>
 
 </body></html>
-
