--- a/uj/zajecia/24-25z/wats3-2/pracedomowe/6/index.html
+++ b/uj/zajecia/24-25z/wats3-2/pracedomowe/6/index.html
@@ -14,7 +14,7 @@
 
 <h1>Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 2</h1>
 
-<h2>Karolina Żmuda - Seongsu jako „najfajniejsza dzielnica świata”</h2>
+<h2>Karolina Żmuda - Seongsu jako „najfajniejsza dzielnica świata” - '성수동에서 놀자'…데이트코스부터 맛집까지</h2>
 
 <h3>어휘</h3>
 
