--- a/uj/zajecia/24-25z/wats3-2/pracedomowe/7/index.html
+++ b/uj/zajecia/24-25z/wats3-2/pracedomowe/7/index.html
@@ -14,7 +14,7 @@
 
 <h1>Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 2</h1>
 
-<h2>Bogdan Borawski - techno-orientalizm</h2>
+<h2>Bogdan Borawski - techno-orientalizm - 왜 동양인 얼굴은 똑같아?"…'롤드컵' 뮤직비디오 인종차별 논란</h2>
 
 <h3>어휘</h3>
 
