--- a/uj/zajecia/24-25z/wats3-2/zajecia/9/index.html
+++ b/uj/zajecia/24-25z/wats3-2/zajecia/9/index.html
@@ -38,9 +38,21 @@
 <h3>번역</h3>
 
 <p>0. ‘아아’ vs ‘뜨아’…한국인의 커피 ♥ 어느 정도길래?</p>
+<ul>
+	<li>"AA" vs "TTA" - jak bardzo Koreańczycy ubóstwiają kawę?</li>
+</ul>
 <p>1. 직장인 김모(34) 씨는 출근길에 들른 카페에서 뜨거운 아메리카노를 주문했다.</p>
+<ul>
+	<li>Pracownik biurowy o nazwisku Kim (34 l.) w drodze do pracy zamówił w kawiarni gorące americano.</li>
+</ul>
 <p>2. 커피를 받자마자 두 손으로 종이컵을 감싸 쥐었다.</p>
+<ul>
+	<li>Gdy tylko otrzymał kawę, ciasno objął papierowy kubeczek obiema rękami.</li>
+</ul>
 <p>3. 따뜻한 온기가 손끝을 통해 전해져 몸이 녹는 듯했다.</p>
+<ul>
+	<li>Ciepło przeniknęło przez palce do całego ciała, co sprawiło, że poczuł, jakby miał się rozpuścić.</li>
+</ul>
 
 <h3>어휘</h3>
 
@@ -57,9 +69,23 @@
 <h3>번역</h3>
 
 <p>4-1. 출근하던 도중 미끄러운 길에서 발이 살짝 헛디뎠지만,</p>
+<ul>
+	<li>Mimo że lekko zachwiał się na śliskiej powierzchni w drodze do pracy,</li>
+</ul>
 <p>4-2. 뜨거운 커피를 꼭 쥐고 있는 덕에 중심을 잡을 수 있었다.</p>
-<p>5. 동료들에게 커피 이야기를 하며 웃으며 말했다.</p>
+<ul>
+	<li>dzięki trzymanej mocno w ręku gorącej kawie był w stanie odzyskać równowagę.</li>
+</ul>
+<p>5. 동료들에게 커피 이야기를 웃으며 말했다.</p>
+<ul>
+	<li>Ze śmiechem opowiedział o historii z kawą swoim kolegom w pracy.</li>
+</ul>
 <p>6. 결국 김 씨는 따뜻한 커피를 마시며 아침 업무도 기분 좋게 시작할 수 있었다.</p>
+<ul>
+	<li>Ostatecznie pan Kim wypił ciepłą kawę i od rana mógł w dobrym humorze rozpocząć pracę.</li>
+</ul>
+
+<h2 class="homework">Praca domowa</h2>
 
 <h3>어휘</h3>
 
@@ -99,6 +125,8 @@
 <p>9. 한 모금 마실 때마다 느껴지는 청량감이 이 씨의 기운을 되살렸다.</p>
 <p>10. 덕분에 오후의 힘든 회의도 씩씩하게 마무리할 수 있었다.</p>
 <p>11. 차가운 커피 한 잔이 힘든 직장생활을 견디는 동력이 되었다.</p>
+
+<hr class="homework">
 
 <h3>어휘</h3>
 
