--- a/uj/zajecia/24-25z/wats3-2/pracedomowe/5/index.html
+++ b/uj/zajecia/24-25z/wats3-2/pracedomowe/5/index.html
@@ -14,7 +14,7 @@
 
 <h1>Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 2</h1>
 
-<h2>Noemi Matuszczak - powodzie	</h2>
+<h2>Noemi Matuszczak - powodzie - 북중 피해 ‘극과 극’…“중국측 홍수방지 방벽으로 북한에 더 큰 피해”</h2>
 
 <h3>어휘</h3>
 
