--- a/uj/zajecia/24-25z/wats3-2/pracedomowe/8/index.html
+++ b/uj/zajecia/24-25z/wats3-2/pracedomowe/8/index.html
@@ -14,7 +14,7 @@
 
 <h1>Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 2</h1>
 
-<h2>Martyna Zboch - polityka zagraniczna Korei Płd. wobec UE</h2>
+<h2>Martyna Zboch - polityka zagraniczna Korei Płd. wobec UE - 성남시, 폴란드 브로츠와프시와 우호 교류 협약</h2>
 
 <h3>어휘</h3>
 
