--- a/uj/zajecia/24-25z/wats3-2/pracedomowe/9/index.html
+++ b/uj/zajecia/24-25z/wats3-2/pracedomowe/9/index.html
@@ -14,7 +14,7 @@
 
 <h1>Warsztaty analizy tekstów specjalistycznych poz. 3, grupa 2</h1>
 
-<h2>Wiktoria Puchała - sprawa kryminalna Jeong Yu-jeong</h2>
+<h2>Wiktoria Puchała - sprawa kryminalna Jeong Yu-jeong - 어쩐지 쎄한 중고거래… “살인해보고 싶었다”던 정유정 미끼였다</h2>
 
 <h3>어휘</h3>
 
