--- a/uj/zajecia/24-25l/ljk5/zajecia/znaki/2/index.html
+++ b/uj/zajecia/24-25l/ljk5/zajecia/znaki/2/index.html
@@ -168,5 +168,144 @@
 	</tr>
 </table>
 
+<h3>分자로 끝나는 단어</h3>
+
+<table class="hanja">
+	<tbody>
+		<tr>
+			<td class="hanja-related-1">區</td>
+			<td class="hanja-related-2">充</td>
+			<td class="hanja-related-3">氣</td>
+		</tr>
+		<tr>
+			<td class="hanja-related-10">親</td>
+			<td class="hanja-core" rowspan="2">分</td>
+			<td class="hanja-related-4">德</td>
+		</tr>
+		<tr>
+			<td class="hanja-related-9">水</td>
+			<td class="hanja-related-5">部</td>
+		</tr>
+		<tr>
+			<td class="hanja-related-8">成</td>
+			<td class="hanja-related-7">身</td>
+			<td class="hanja-related-6">人</td>
+		</tr>
+	</tbody>
+</table>
+
+<details>
+	<summary></summary>
+	<ol>
+		<li>구분 區分
+			<ul>
+				<li>구분할 구</li>
+				<li><a href="https://hanja.dict.naver.com/#/entry/ccko/0dd84bb404d240998bc34fc069de9939">https://hanja.dict.naver.com/#/entry/ccko/0dd84bb404d240998bc34fc069de9939</a></li>
+			</ul>
+		</li>
+		<li>충분 充分
+			<ul>
+				<li>채울 충</li>
+				<li><a href="https://hanja.dict.naver.com/#/entry/ccko/c5e60817de674522a06d0922f8e91c30">https://hanja.dict.naver.com/#/entry/ccko/c5e60817de674522a06d0922f8e91c30</a></li>
+			</ul>
+		</li>
+		<li>기분 氣分
+			<ul>
+				<li>기운 기</li>
+				<li><a href="https://hanja.dict.naver.com/#/entry/ccko/228cc1550bab4874a80d6fa9b08b3df1">https://hanja.dict.naver.com/#/entry/ccko/228cc1550bab4874a80d6fa9b08b3df1</a></li>
+			</ul>
+		</li>
+		<li>덕분 德分
+			<ul>
+				<li>덕 덕</li>
+				<li><a href="https://hanja.dict.naver.com/#/entry/ccko/c4ede003478a44dd865ad4c89ebdf697">https://hanja.dict.naver.com/#/entry/ccko/c4ede003478a44dd865ad4c89ebdf697</a></li>
+			</ul>
+		</li>
+		<li>부분 部分
+			<ul>
+				<li>거느릴 부</li>
+				<li><a href="https://hanja.dict.naver.com/#/entry/ccko/a868c09ee19548da9177ba967f32de5e">https://hanja.dict.naver.com/#/entry/ccko/a868c09ee19548da9177ba967f32de5e</a></li>
+			</ul>
+		</li>
+		<li>인분 人分
+			<ul>
+				<li>사람 인</li>
+				<li><a href="https://hanja.dict.naver.com/#/entry/ccko/d446a20e9291464582e611a365fffa4e">https://hanja.dict.naver.com/#/entry/ccko/d446a20e9291464582e611a365fffa4e</a></li>
+			</ul>
+		</li>
+		<li>신분 身分
+			<ul>
+				<li>몸 신</li>
+				<li><a href="https://hanja.dict.naver.com/#/entry/ccko/9688c34b633f47c2a7637825c97ac220">https://hanja.dict.naver.com/#/entry/ccko/9688c34b633f47c2a7637825c97ac220</a></li>
+			</ul>
+		</li>
+		<li>성분 成分
+			<ul>
+				<li>이룰 성</li>
+				<li><a href="https://hanja.dict.naver.com/#/entry/ccko/47f033740a5748daa200046b055d0acb">https://hanja.dict.naver.com/#/entry/ccko/47f033740a5748daa200046b055d0acb</a></li>
+			</ul>
+		</li>
+		<li>수분 水分
+			<ul>
+				<li>물 수</li>
+				<li><a href="https://hanja.dict.naver.com/#/entry/ccko/10ecd8745cb149558471bee716b98b8c">https://hanja.dict.naver.com/#/entry/ccko/10ecd8745cb149558471bee716b98b8c</a></li>
+			</ul>
+		</li>
+		<li>친분 親分
+			<ul>
+				<li>친할 친</li>
+				<li><a href="https://hanja.dict.naver.com/#/entry/ccko/92448eb6fbb24fad89ceca8e8b16368c">https://hanja.dict.naver.com/#/entry/ccko/92448eb6fbb24fad89ceca8e8b16368c</a></li>
+			</ul>
+		</li>
+	</ol>
+</details>
+
+<table>
+	<thead>
+		<th>한자어</th>
+		<th>문장 만들기 연습(괄호 안에 단어를 사용하기)</th>
+	</thead>
+	<tr>
+		<td>區分</td>
+		<td>(수업, 초중고급)</td>
+	</tr>
+	<tr>
+		<td>充分</td>
+		<td>(음식, 준비하다)</td>
+	</tr>
+	<tr>
+		<td>氣分</td>
+		<td>(운동, 좋아지다)</td>
+	</tr>
+	<tr>
+		<td>德分</td>
+		<td>(한국 드라마, 한국말)</td>
+	</tr>
+	<tr>
+		<td>部分</td>
+		<td>(한류, 한국 문화)</td>
+	</tr>
+	<tr>
+		<td>人分</td>
+		<td>(우리 가족, 불고기)</td>
+	</tr>
+	<tr>
+		<td>身分</td>
+		<td>(외교관, 일하다)</td>
+	</tr>
+	<tr>
+		<td>成分</td>
+		<td>(생명체, 구성하다)</td>
+	</tr>
+	<tr>
+		<td>水分</td>
+		<td>(피부 건강, 섭취하다)</td>
+	</tr>
+	<tr>
+		<td>親分</td>
+		<td>(그분, 오랫동안)</td>
+	</tr>
+</table>
+
 </body></html>
 
