--- a/uj/zajecia/24-25l/mkmb/homework/3/index.html
+++ b/uj/zajecia/24-25l/mkmb/homework/3/index.html
@@ -14,81 +14,131 @@
 
 <h1>Modern Korean in Media and Business (3)</h1>
 
-<h2>어휘</h2>
+<h2>Gabriela Pikus - international success of Korean cinema	</h3>
+
+<h3>어휘</h3>
 
 <ul>
+	<li>강국 - powerhouse (about a country)</li>
+	<li>자국 - mark, spot</li>
+	<li>살펴보다 - to look into, to examine</li>
+	<li>흥행 - box-office (the number of viewers or the revenue from ticket sales for a given film)</li>
+	<li>토대 - base (of sth)</li>
+	<li>상황 - situation, conditions</li>
+	<li>더욱 - more, increasingly</li>
+	<li>명확히 - clearly</li>
+	<li>파악하다 - to understand (e.g. a situation)</li>
+	<li>연도별 - by year</li>
+	<li>비중 - proportion</li>
+	<li>따져보다 - to look into</li>
+	<li>무려 - around, approximately</li>
 </ul>
 
 <h3>번역</h3>
 
-<h2>어휘</h2>
+<p>1. 한국은 왜 ‘범죄영화 강국’이 됐나?</p>
+<p>Why did South Korea become a ‘crime movie powerhouse’?</p>
+<p>2. 한국영화 시장의 유난한 자국 범죄영화 인기를 좀 더 살펴보자.</p>
+<p>Let’s take a closer look at the popularity of crime movies in the Korean film market.</p>
+<p>3. 흥행 성적을 토대로 보면 상황이 더욱 명확히 파악된다.</p>
+<p>Based on the box-office results, the situation is more clearly understood.</p>
+<p>4. 지난 20년 동안 연도별 한국영화 200편 중 범죄영화의 비중을 따져보면 무려 57편이다.</p>
+<p>If we look into the proportion of crime movies among the 200 Korean movies by year released over the past 20 years, there are approximately 57.</p>
+
+<h3>어휘</h3>
 
 <ul>
+	<li>열광하다 - to be enthusiastic</li>
+	<li>다루다 - to deal (with)</li>
+	<li>승승장구하다 - to continuously win, to be on a roll</li>
+	<li>특유 - unique</li>
+	<li>무게감 - weight</li>
+	<li>진지하다 - to be serious</li>
+	<li>탓 - reason</li>
+	<li>상업적 - commercial</li>
+	<li>오락영화 - entertaining movie</li>
+	<li>소화하다 - to digest</li>
 </ul>
 
 <h3>번역</h3>
 
-<h2>어휘</h2>
+<p>5-1. 세계 10대 영화 시장들을 살펴봐도</p>
+<p>Looking at the world’s top 10 movie markets,</p>
+<p>5-2. 한국만큼 자국 범죄영화에 열광하는 분위기는 찾아볼 수 없다.</p>
+<p>there is no more enthusiastic atmosphere about crime movies than in Korea.</p>
+<p>6-1. 특히 실제 범죄 사건을 다룬 영화가 승승장구하는 분위기는</p>
+<p>Especially, the continuous success of movies that deal with real crime cases</p>
+<p>6-2.  세계 어디서도 찾아보기 힘들다.</p>
+<p>is hard to find anywhere else in the world.</p>
+<p>7. 실제 범죄가 주는 특유의 무게감과 진지함 탓에</p>
+<p>Due of the unique weight and seriousness that real crimes bring,</p>
+<p>8. 상업적 오락영화로 소화하기 어렵기 때문이다.</p>
+<p>it is difficult to digest as a commercial, entertaining movie.</p>
+
+<h3>어휘</h3>
 
 <ul>
+	<li>물론 - of course, obviously</li>
+	<li>그저 - just, only</li>
+	<li>취향 - taste, preference</li>
+	<li>치부하다 - to consider</li>
+	<li>문화권 - cultural region/sphere</li>
+	<li>구분하다 - to distinguish</li>
+	<li>국지적 - local, regional</li>
+	<li>존재하다 - to exist</li>
+	<li>애착 - attachment (e.g. to a person/place)</li>
+	<li>상당하다 - to be significant</li>
+	<li>강세 - strong trend</li>
+	<li>남다르다 - to be unusual/uncommon</li>
+	<li>사회적 - social</li>
+	<li>배경 - background</li>
+	<li>뚜렷하다 - to be distinct</li>
 </ul>
 
 <h3>번역</h3>
 
-<h2>어휘</h2>
+<p>9. 물론 이것도 그저 ‘취향’일 뿐이라고 치부(置簿)할 수도 있다.</p>
+<p>Of course, it can be also considered as just a matter of taste.</p>
+<p>10. 어느 나라, 어느 문화권이든 구분되는 국지(局地)적 문화 취향들은 존재한다.</p>
+<p>In any country or cultural region there exist distinguished regional cultural tastes.</p>
+<p>11. 일본은 애니메이션에 대한 애착이 상당하고 프랑스는 코미디영화가 늘 강세다.</p>
+<p>Japan has a significant attachment to animation and France always has strong comedy movies.</p>
+<p>12. 그런데 이런 국지적 취향들에도 대부분 남다른 사회·문화적 배경이 뚜렷이 존재한다.</p>
+<p>However, even in these regional tastes, most of them have distinct, unusual social and cultural backgrounds.</p>
+
+<h3>어휘</h3>
 
 <ul>
+	<li>사실상 - actually, in fact</li>
+	<li>각종 - various</li>
+	<li>안전사고 - safety accident</li>
+	<li>식품위생 - food hygiene</li>
+	<li>일상 - everyday life</li>
+	<li>노후 - old age</li>
+	<li>자녀 - children</li>
+	<li>일 - thing</li>
+	<li>결정적 - crucial, decisive</li>
+	<li>포털사이트 - portal sites</li>
+	<li>재편되다 - to be reorganized</li>
+	<li>갖가지 - variety</li>
+	<li>자극적인 - sensational</li>
+	<li>쏟아내다 - to pour out</li>
+	<li>시기적 궤를 같이하다 - to coincide with the time</li>
 </ul>
 
 <h3>번역</h3>
 
-<h2>어휘</h2>
-
-<ul>
-</ul>
-
-<h3>번역</h3>
-
-<h2>어휘</h2>
-
-<ul>
-</ul>
-
-<h3>번역</h3>
-
-<h2>어휘</h2>
-
-<ul>
-</ul>
-
-<h3>번역</h3>
-
-<h2>어휘</h2>
-
-<ul>
-</ul>
-
-<h3>번역</h3>
-
-<h2>어휘</h2>
-
-<ul>
-</ul>
-
-<h3>번역</h3>
-
-<h2>어휘</h2>
-
-<ul>
-</ul>
-
-<h3>번역</h3>
-
-<h2>어휘</h2>
-
-<ul>
-</ul>
-
-<h3>번역</h3>
+<p>13. 한국인은 사실상 ‘모든 것’이 불안하다.</p>
+<p>Koreans are actually anxious about everything.</p>
+<p>14-1. 각종 안전사고나 식품위생 등 일상부터</p>
+<p>From daily life various safety accidents and food hygiene</p>
+<p>14-2. 자신의 노후나 자녀의 앞날 등 미래의 일들까지 모든 게 불안하다.</p>
+<p>to own old age and the future of children, everything is uncertain.</p>
+<p>15. 실제로 그런 문제들이 삶에 결정적 위협이 되는 나라들보다도 더 그렇다.</p>
+<p>Actually, the feeling is even stronger than in countries where such problems do pose a crucial threat to life.</p>
+<p>16-1. 범죄영화 붐은 2000년대 들어 포털사이트 중심으로 뉴스가 재편되면서</p>
+<p>The crime movie boom began in the 2000s when news was reorganized around portal sites,</p>
+<p>16-2. 갖가지 자극적인 범죄 사건 보도를 실시간으로 쏟아내기 시작한 때와 시기적 궤를 같이한다.</p>
+<p>and it coincides with the time when various sensational crimes incidents began to be poured out in real time.</p>
 
 </body></html>
