--- a/uj/zajecia/24-25l/mkmb/homework/4/index.html
+++ b/uj/zajecia/24-25l/mkmb/homework/4/index.html
@@ -14,81 +14,98 @@
 
 <h1>Modern Korean in Media and Business (3)</h1>
 
-<h2>어휘</h2>
+<h2>Jaeseung Seo - military service in Korea</h2>
+
+<h3>어휘</h3>
 
 <ul>
+	<li>면제 - exemption</li>
+	<li>특례(特例) - 특별한 예 - special case</li>
+	<li>존재감 - sense of existence, presence</li>
+	<li>마련하다 - to prepare</li>
+	<li>경력 단절 - career interrupted</li>
+	<li>활동 - activity</li>
+	<li>공감대 - consensus</li>
+	<li>자격 - qualification</li>
+	<li>복귀 - return</li>
+	<li>분야 - field</li>
+	<li>공헌 - contribution</li>
+	<li>이수하다 - to complete</li>
+	<li>간주하다 - to regard, to account, to see (as)</li>
 </ul>
 
 <h3>번역</h3>
 
-<h2>어휘</h2>
+<p>0-1. “BTS는 안 되고 e스포츠 선수는 된다?”</p>
+<p>Controversy reignites over military exemption for gold medalists</p>
+<p>0-2. 금메달 병역면제 또 논란</p>
+<p>“BTS is NO, but e-sports player is OK?”</p>
+<p>1-1. 1973년 도입된 병역특례제도는</p>
+<p>The military exemption system was prepared in 1973</p>
+<p>1-2. 세계무대에서 존재감이 없었던 한국을 스포츠를 통해 알리기 위해서 마련됐다.</p>
+<p>to promote Korea that barely visible on the global stage before, through sports.</p>
+<p>2. 예술인과 체육인이 경력 단절 없이 활동을 이어가는 것이 필요하다는 공감대도 이뤄졌다.</p>
+<p>There was also consensus on the need to allow artists and athletes to continue their careers without break.</p>
+<p>3-1. 이에 따라 특정 자격을 갖출 경우</p>
+<p>Accordingly, those who have specific qualifications</p>
+<p>3-2. 기초군사훈련만 받고 사회로 복귀해</p>
+<p>3-3. 34개월 동안 각자의 분야에서 일하면서 사회공헌활동 544시간을 이수하면</p>
+<p>3-4. 병역의무를 마친 것으로 간주하고 있다.</p>
+<p>can be regarded military duty by completing only basic military training, returning to society, and contributing 544 hours of community service in their fields over 34 months.</p>
+
+<h3>어휘</h3>
 
 <ul>
+	<li>병무청 - Military Manpower Administration</li>
+	<li>병역의무의 특례규제에 관한 법률 - Special Act on Military Service Exemptions</li>
+	<li>입상하다 = 상을 받다 - to win a prize</li>
+	<li>경연대회 - contest</li>
+	<li>국가무형문화재 - intangible cultural heritage</li>
+	<li>전수(-하다) - transfer</li>
+	<li>혜택 - benefit, advantage</li>
 </ul>
 
 <h3>번역</h3>
 
-<h2>어휘</h2>
+<p>4-1. 병무청과 병역의무의 특례규제에 관한 법률에 따르면</p>
+<p>according to the Military Manpower Administration and the Special Act on Military Service Exemptions,</p>
+<p>4-2. 체육 분야에서는 △올림픽대회 3위 이내 △아시아경기대회 1위 등에 입상한 선수들이 병역특례 혜택을 받는다.</p>
+<p>in case of sports, athletes who win medals top 3 at the Olympics or gold medalists at the Asian Games qualify for exemptions.</p>
+<p>5. 예술 분야에서는 △국제예술경연대회 2위 이내 △국내예술경연대회 1위 △중요 국가무형문화재 전수교육 이수자에게 혜택이 주어진다.</p>
+<p>In the case of Arts, top 2 placings in International art contest winners, gold medalist in Domestic art contest, and those who complete training in important intangible cultural heritage fields can get benefits.</p>
+
+<h3>어휘</h3>
 
 <ul>
+	<li>무대 - stage</li>
+	<li>국가 위상 - status of state</li>
+	<li>드높이다 - to enhance, to raise</li>
+	<li>입장(立場) - stance, view</li>
+	<li>팽팽히 - tightly, closely</li>
+	<li>맞서다 - tp stand face to face</li>
+	<li>양상 - look, aspect</li>
+	<li>과도하다 - to be excessive, to be too much</li>
+	<li>국위 선양 - enhancing national prestige</li>
+	<li>보답 - reward, return, bonus</li>
+	<li>제도 - policy, system</li>
+	<li>도입 - introduction, adoption, implementation</li>
+	<li>~한 만큼 - as much as</li>
+	<li>성장 - growth</li>
+	<li>기량 - ability</li>
 </ul>
 
 <h3>번역</h3>
 
-<h2>어휘</h2>
-
-<ul>
-</ul>
-
-<h3>번역</h3>
-
-<h2>어휘</h2>
-
-<ul>
-</ul>
-
-<h3>번역</h3>
-
-<h2>어휘</h2>
-
-<ul>
-</ul>
-
-<h3>번역</h3>
-
-<h2>어휘</h2>
-
-<ul>
-</ul>
-
-<h3>번역</h3>
-
-<h2>어휘</h2>
-
-<ul>
-</ul>
-
-<h3>번역</h3>
-
-<h2>어휘</h2>
-
-<ul>
-</ul>
-
-<h3>번역</h3>
-
-<h2>어휘</h2>
-
-<ul>
-</ul>
-
-<h3>번역</h3>
-
-<h2>어휘</h2>
-
-<ul>
-</ul>
-
-<h3>번역</h3>
+<p>6-1. 글로벌 무대에서 국가 위상을 드높인 만큼 병역특례가 주어져야 한다는 입장과</p>
+<p>6-2. 군 면제는 과도한 혜택이라는 입장이 팽팽히 맞서는 양상이다.</p>
+<p>There is fierce argue between those who accept military exemptions should be granted for enhancing national status in the global stage, and those who view such waivers as excessive privilege.</p>
+<p>7-1. 이정학 경희대 체육대학원 교수는</p>
+<p>Prof. Lee JungHak in Graduate school of physical education KyungHee Univ. said</p>
+<p>7-2. “체육인 입장에서는 병역 특례가 좋은 성적으로 국위선양을 한 데 따른 혜택이자 보답이라고 생각할 수 있다”</p>
+<p>“From athletes’ perspective, military service exemptions can be seen as both a benefit and bonus for enhancing national prestige”면서도</p>
+<p>7-3. “그러나 제도 도입 이후 시간이 많이 지난 만큼</p>
+<p>and “however, times have changed since the system,</p>
+<p>7-4. 이제 선수들이 병역 특례를 주지 않아도 개인의 성장과 기량 발전을 위해 열심히 뛰는 시대가 왔다”고 말했다.</p>
+<p>athletes train and compete well for personal growth and development of ability without incentive of military service exemptions.”</p>
 
 </body></html>
